--- a/LogicaAplicacion/LogicaAplicacion.csproj
+++ b/LogicaAplicacion/LogicaAplicacion.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\LogicaNegocio\LogicaNegocio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Clientes\" />
+  </ItemGroup>
+
 </Project>
